@@ -12,51 +12,96 @@ import javafx.scene.paint.Color;
 import javafx.scene.shape.Circle;
 import javafx.util.Duration;
 import org.flimwip.design.Controller.CheckoutSelectionController;
+import org.flimwip.design.Controller.UserController;
 import org.flimwip.design.Models.CheckoutModel;
 import org.flimwip.design.utility.*;
 import org.flimwip.design.utility.Runnables.Check_Connection;
 import org.flimwip.design.utility.Runnables.FetchFiles;
+import org.flimwip.design.Documentationhandler.*;
 
 import java.io.File;
 import java.io.IOException;
 import java.util.concurrent.*;
 
+@ServiceC(desc="Displays a checkout on the Branchview.")
 public class Checkout extends VBox {
 
-    private final String location;
-    private final String city;
+    private final String branch;
+    private final String branch_name;
+    private final String region;
+    private final String checkout_id;
+    private final String betriebsstelle;
+    private final String ip;
+    private final String modell;
+    private final String os;
+    private final String hostname;
+    @ServiceATT(desc="Animation Duration for hover action.",
+                type="Duration")
     private final Duration duration = Duration.seconds(0.05);
-    private final String checkout;
-    private boolean selected = false;
-    private String version;
-    private Label l;
-    private final CheckoutSelectionController cont;
-    private CheckoutModel km;
-    private Circle c;
-    private Semaphore semaphore;
-    private boolean active = false;
-    private boolean online = false;
-    private File[] files;
 
-    private MyLogger logger = new MyLogger(this.getClass());
+    @ServiceATT(desc="Holds the information if the checkout is currently selected.",
+                type="boolean")
+    private boolean selected = false;
+    @ServiceATT(desc="Displays the identifier of the checkout.",
+                type="Label")
+    private Label l;
+    
+    @ServiceATT(desc="Controller to switch the view between the selected Checkouts.",
+                type="CheckoutSelectionController")
+    private final CheckoutSelectionController cont;
+    @ServiceATT(desc="Circle that displays if the checkout can be reached or not.",
+                type="Circle")
+    private Circle c;
+    
+    @ServiceATT(desc="Semaphore to schedule multithreading tasks for multiple Checkouts.",
+                type="Semaphore")
+    private Semaphore semaphore;
+    
+    @ServiceATT(desc="Holds the information if the checkout could be reached and therefore is online.",
+                type="boolean")
+    private boolean online = false;
+    
+    @ServiceATT(desc="All the Files that could be found on the checkout in the gkretail/pos-full/log folder.",
+                type="File[]")
+    private File[] files;
+    
+    @ServiceATT(desc="Logger to print inforamtions to the Console.",
+                type="PKLogger")
+    private PKLogger logger = new PKLogger(this.getClass());
+
+    private final UserController uc;
 
 
     /**
      * Contructor
-     * @param location String -> Location of the Checkout
-     * @param checkout String -> ID of the Checkout
-     * @param version String -> current Software-Version of the Checkout
+     * @param cm {@link CheckoutModel} -> Model representing the checkout
      * @param checkoutSelectionController {@link CheckoutSelectionController} -> Controller to handle the UI changes
      * @param semaphore {@link Semaphore} -> Handling of the permits for currently running background operations
      */
-    public Checkout(String location, String checkout, String version, CheckoutSelectionController checkoutSelectionController, Semaphore semaphore) {
-        this.city = StandortTranslator.getSTANDORT(Integer.parseInt(location));
+    @ServiceCR(desc="Constructor of the Checkout class",
+               params={"location: String -> Location of the Checkout",
+                       "checkout: String -> ID of the Checkout",
+                       "version: String -> current Software-Version of the Checkout",
+                       "checkoutSelectionController: CheckoutSelectionController -> Controller to handle the UI changes",
+                       "semaphore: Semaphore -> Handling of the permits for currently running background operations"})
+    public Checkout(CheckoutModel cm, CheckoutSelectionController checkoutSelectionController, Semaphore semaphore, UserController uc) {
+        /*
+                    String branch, String branch_name, String region, String checkout_id, String betriebsstelle, String ip, String modell, String os
+                     */
+        this.branch = cm.branch();
+        this.branch_name = cm.branch_name();
+        this.region = cm.region();
+        this.checkout_id = cm.checkout_id();
+        this.betriebsstelle = cm.betriebsstelle();
+        this.ip = cm.ip();
+        this.modell = cm.modell();
+        this.os = cm.os();
+        this.hostname = cm.hostname();
+        this.uc = uc;
         this.semaphore = semaphore;
-        this.setId(location + checkout);
-        this.checkout = checkout;
-        this.location = location;
+
+        this.setId(cm.ip());
         this.cont = checkoutSelectionController;
-        this.version = version;
         init();
         try {
             search_for_connection();
@@ -66,27 +111,13 @@ public class Checkout extends VBox {
     }
 
     /**
-     * Contructor
-     * @param km {@link CheckoutModel} -> Model for the Checkout with all information
-     * @param controller {@link CheckoutSelectionController} -> Controller to handle the UI changes
-     * @param semaphore {@link Semaphore} -> Handling of the permits for currently running background operations
-     */
-    public Checkout(CheckoutModel km, CheckoutSelectionController controller, Semaphore semaphore) {
-        this.city = km.branch_name();
-        this.semaphore = semaphore;
-        this.checkout = km.checkout_id();
-        this.location = km.branch();
-        this.setId(location + checkout);
-        this.cont = controller;
-        this.version = km.version();
-        this.km = km;
-        init();
-
-    }
-
-    /**
      * Initializer for the CheckoutView
      */
+    @ServiceM(desc="Initializer for the CheckoutView",
+              category="Method",
+              params={"None"},
+              returns="void",
+              thrown={"None"})
     private void init() {
         //setting the Insets
         Insets set = new Insets(6, 10, 6, 10);
@@ -104,7 +135,7 @@ public class Checkout extends VBox {
 
         //Setting Label and Circle for status
         HBox top = new HBox();
-        this.l = new Label(this.checkout);
+        this.l = new Label(String.valueOf(Integer.parseInt(this.ip.split("\\.")[3]) - 100));
         this.l.setStyle("-fx-font-weight: bold;");
         this.l.setTextFill(Color.BLACK);
         c = new Circle(8, Color.GRAY);
@@ -126,13 +157,13 @@ public class Checkout extends VBox {
         this.setStyle("-fx-background-color: #56565644; -fx-border-color: black; -fx-border-radius: 15; -fx-background-radius: 15;");
 
         //Styling for mouse over
-        this.setOnMouseEntered(mouseEvent -> {
+        this.setOnMouseEntered( _ -> {
             if (!selected) {
 
                 Timeline time = new Timeline(
                         new KeyFrame(duration, new KeyValue(this.styleProperty(), "-fx-background-color: #565656; -fx-border-color: #565656; -fx-border-radius: 15; -fx-background-radius: 15;", Interpolator.EASE_IN))
                 );
-                time.setOnFinished(actionEvent -> {
+                time.setOnFinished(_ -> {
                     this.l.setTextFill(Color.WHITE);
 
                 });
@@ -143,12 +174,12 @@ public class Checkout extends VBox {
         });
 
         //Styling for mouse movement
-        this.setOnMouseMoved(mouseEvent -> {
+        this.setOnMouseMoved(_ -> {
             cont.set_mouse_focus(this.getId());
         });
 
         //Styling for mouse exit
-        this.setOnMouseExited(mouseEvent -> {
+        this.setOnMouseExited(_ -> {
             if (!selected) {
                 this.l.setTextFill(Color.BLACK);
                 Timeline time = new Timeline(
@@ -161,7 +192,7 @@ public class Checkout extends VBox {
         });
 
         //handling for on mouse click with showing data and styling
-        this.setOnMouseClicked(mouseEvent -> {
+        this.setOnMouseClicked(_ -> {
             if (online) {
                 if (selected) {
                     selected = false;
@@ -176,8 +207,6 @@ public class Checkout extends VBox {
                     selected = true;
                     cont.set_selected_checkout(this.getId());
                     this.setStyle("-fx-background-color: #232323; -fx-border-color: #232323; -fx-border-radius: 15; -fx-background-radius: 15;");
-                    this.cont.set_version_on_view(this.version);
-                    this.cont.set_city_on_view(this.city);
                     this.cont.set_selected_checkout(this.getId());
                 }
             }
@@ -189,9 +218,14 @@ public class Checkout extends VBox {
     /**
      * Possablilty to remotely deselect a checkout
      */
+    @ServiceM(desc="<##>Function to remotely deselect a checkout",
+              category="Method",
+              params={"None"},
+              returns="void",
+              thrown={"None"})
     public void unselect() {
         if (this.getChildren().size() > 1) {
-            this.getChildren().remove(this.getChildren().size() - 1);
+            this.getChildren().removeLast();
         }
         this.selected = false;
         this.setMinHeight(30);
@@ -203,6 +237,11 @@ public class Checkout extends VBox {
     /**
      * Possibility to remove the focus off of a checkout
      */
+    @ServiceM(desc="Function to remove the focus off of a checkout",
+              category="Method",
+              params={"None"},
+              returns="void",
+              thrown={"None"})
     public void remove_focus() {
         if (!selected) {
             this.l.setTextFill(Color.BLACK);
@@ -213,15 +252,18 @@ public class Checkout extends VBox {
 
     /**
      * Starting the Search for Connection
-     *
-     * @throws IOException
-     * @throws ExecutionException
-     * @throws InterruptedException
      */
+    @ServiceM(desc="Starting the Search for Connection",
+              category="Method",
+              params={"Noen"},
+              returns="void",
+              thrown={"IOException -> if the path to the Checkout is incorrect and there is no InputStream to read",
+                      "ExcutionException -> if the Execution of the CommandLine command failed",
+                      "InterruptedException -> if the Thread on which this operation runs is interrupted unexpectedly"})
     private void search_for_connection() throws IOException, ExecutionException, InterruptedException {
-        Thread th = new Thread(new Check_Connection(this.location, this.checkout, this, this.semaphore));
+        Thread th = new Thread(new Check_Connection( this, this.semaphore, uc));
         th.setDaemon(true);
-        th.setName("Thread [" + this.checkout + "]");
+        th.setName(STR."Thread [\{this.hostname}]");
         th.start();
 
     }
@@ -229,21 +271,43 @@ public class Checkout extends VBox {
     /**
      * Setting the Checkout online making it clickable and the circle green
      */
+    @ServiceM(desc="<##>Setting the Checkout online making it clickable and the circle green",
+              category="Setter",
+              params={"None"},
+              returns="void",
+              thrown={"None"})
     public void set_online() {
         this.c.setFill(Color.GREEN);
         this.online = true;
     }
 
+    public String get_hostname(){
+        return this.hostname;
+    }
+
     /**
      * Setting the Checkout to seraching. In this state the Checkout in the BranchView is not Clickable and the Circle has the color Yellow.
      */
+    @ServiceM(desc="<##>Setting the Checkout to seraching. In this state the Checkout in the BranchView is not Clickable and the Circle has the color Yellow.",
+              category="Setter",
+              params={"None"},
+              returns="void",
+              thrown={"None"})
     public void set_searching() {
         this.c.setFill(Color.ORANGE);
     }
 
+    public String get_ip(){
+        return this.ip;
+    }
     /**
      * Setting the Checkout offline. The Checkout remains not Clickable and the Circle is red.
      */
+    @ServiceM(desc="<##>Setting the Checkout offline. The Checkout remains not Clickable and the Circle is red.",
+              category="Setter",
+              params={"None"},
+              returns="void",
+              thrown={"None"})
     public void set_offline() {
         this.c.setFill(Color.RED);
     }
@@ -253,16 +317,25 @@ public class Checkout extends VBox {
      *
      * @param files File[] -> Array of files found by {@link FetchFiles}
      */
+    @ServiceM(desc="<##>Adds the Files found by the Runnable FetchFiles",
+              category="Setter",
+              params={"files File[] -> Array of files found by FetchFiles"},
+              returns="void",
+              thrown={"None"})
     public void set_files(File[] files) {
         this.files = files;
     }
 
     /**
      * Returns the File[] for use in BranchView
-     * @return
+     * @return File[] -> all Files found on the Checkout
      */
+    @ServiceM(desc="<##>Returns the File[] for use in BranchView",
+              category="Getter",
+              params={"None"},
+              returns="File[] -> all Files found on the Checkout",
+              thrown={"None"})
     public File[] getFiles() {
         return this.files;
     }
-
 }
